5_ComputationalEx/quest/logs/cal_818251.err
Traceback (most recent call last):
  File "calibrate_investment_params.py", line 1, in <module>
    from solve_eqm import EqmParams, solve_ss_equilibrium_least_squares
  File "/gpfs/projects/p32386/Demand_Shifting/solve_eqm.py", line 3, in <module>
    from solve_vf import *
  File "/gpfs/projects/p32386/Demand_Shifting/solve_vf.py", line 31
    pi_new = Pi.T @ pi
                  ^
SyntaxError: invalid syntax
